Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22840

QDBusArgument string and array extraction operators crash with incorrectly typed DBus arguments

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.8.x
    • 4.7.4, 4.8.0, 5.0.0
    • D-Bus
    • None
    • 03905f771b23b1e6d33e6b42811b8b5e915c9d8f (4.8), d1cd17713e6d0bd9c7a270ba675704ad244e2b13 (4.8), 4e8e0b3e215c1b958457a9154b56f3b14a1c8518 (4.8)

      QDbusArgument public extraction operators
      QDBusArgument::operator>>(QString &arg)
      QDBusArgument::operator>>(QDBusObjectPath &arg)
      QDBusArgument::operator>>(QDBusSignature &arg)
      QDBusArgument::operator>>(QStringList &arg) const;
      QDBusArgument::operator>>(QByteArray &arg) const

      Do not perform DBus type checking. The string extraction operators use an invalid pointer if used to extract a non-string value from a DBus message. The QStringList and QByteArray extraction operators crash with non-array or incorrect array element types. The functions should perform basic DBus type checking and deny extraction of incompatible values.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srosenda Sami Rosendahl
            srosenda Sami Rosendahl
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: